[eims] - fix circular dependency, enhance security config for more roles and more robust functionality